--- a/audio-time/app/globals.css
+++ b/audio-time/app/globals.css
@@ -13,6 +13,7 @@
   
   /* Add your custom animation here */
   --animate-fadeIn: fadeIn 0.8s ease-out;
+  --animate-fadeOut: fadeOut 0.8s ease-out;
 }
 
 /* Define the keyframes */
@@ -22,6 +23,15 @@
   }
   100% {
     opacity: 1;
+  }
+}
+
+@keyframes fadeOut {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
   }
 }
 
